updated old files; started refactoring to microservice architecture